# fast-api-backend-template

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
src/: main.py
src/auth/: dependencies.py  router.py  service.py  utils.py
src/core/: config.py  exceptions.py  schemas.py
src/db/: base.py
src/users/: models.py  router.py  schemas.py  service.py
tests/: conftest.py  test_main.py
tests/auth/: test_auth.py
tests/users/: test_users.py
